#64402 refactored code with Java 21 features